[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "treetask"
version = "0.1.0"
description = "Streamlit-based task manager that grows a plant as you complete tasks."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "TreeTask Contributors"}]
keywords = ["streamlit", "tasks", "productivity", "todo", "plant"]
requires-python = ">=3.8"
dependencies = [
    "streamlit"
]

[project.scripts]
treetask = "treetask.__main__:main"

[tool.setuptools.package-data]
treetask = ["plant_stage*.png"]
